@@ -123,6 +123,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2016-12-28 mer. 08:50]--[2016-12-28 mer. 08:55] =>  0:05
      CLOCK: [2016-12-28 mer. 07:56]--[2016-12-28 mer. 08:46] =>  0:50
      CLOCK: [2016-12-28 mer. 07:13]--[2016-12-28 mer. 07:54] =>  0:41
      CLOCK: [2016-12-21 mer. 06:13]--[2016-12-21 mer. 07:12] =>  0:59
@@ -137,7 +138,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
 - [-] Changing resolution
   We sometimes have a segfault when changing resolution.
   - [-] Add a ResolutionHandler class we can unit test
-    - [-] Get the actual resolution using a probe(GameEngine*) function
+    - [X] Get the actual resolution using a probe(GameEngine*) function
       If this function can't have actual resolution from Ogre cfg file.
       Test it using regex
       - [X] To unit test it, create a unit test class that override
@@ -145,9 +146,9 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] cmake search for boost.regex 
       - [X] Add Boost.regex component to DEPENDENCIES
       - [X] Implement probeFromString function	
-    - [ ] Try to get it with RenderWindow(or RenderSystem) width/height and 
+    - [X] Try to get it with RenderWindow(or RenderSystem) width/height and 
       cast it to a string value.
-    - [ ] May remove the unneeded probeFromInts function
+    - [X] May remove the unneeded probeFromInts function
     - [ ] Handle probe error using an exception if we can't probe
       in any ways (if two ways fail)
       From src/client/Exception.hpp
